Rettet på listerne så knapperne sender en videre til korrekte side

--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListeMedarbejder.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListeMedarbejder.cshtml
@@ -30,8 +30,8 @@
             <input type="text" placeholder="Søg på 1 for tilflyttere" name="Flytning" />
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd Felter" />
-            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("TilføjerListeBruger", "Home")'" />
-            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("BrugerForside", "Home")'" />
+            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("TilføjerListeMedarbejder", "Home")'" />
+            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("MedarbejderForside", "Home")'" />
         </div>
     }
     <table class="table">
