--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListeMedarbejder.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListeMedarbejder.cshtml
@@ -29,8 +29,8 @@
             <input type="text" placeholder="Søg på Styrkeposition" name="Position" />
             <input type="submit" value="Søg" />
             <input type="reset" value="Ryd Felter" />
-            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'" />
-            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
+            <input type="button" class="button" value="Vis hele listen" onclick="location.href='@Url.Action("VirksomhedListeMedarbejder", "Home")'" />
+            <input type="button" class="button" value="Tilbage til forside" onclick="location.href='@Url.Action("MedarbejderForside", "Home")'" />
         }
     </div>
 
