--- a/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
@@ -9,6 +9,12 @@
         background-size: cover;
      
     }
+    label{
+        display:inline-block;
+        width:87px;
+        text-align:right;
+        font-family: 'Times New Roman';
+    }
 </style>
 
 <body>
