forside har nu log ud knap som virker

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -20,6 +20,15 @@
             width: 150px;
             height: 40px;
         }
+        button {
+            cursor: pointer;
+            font-size: medium;
+            background-color: #000000;
+            color: white;
+            text-align: center;
+            width: 150px;
+            height: 40px;
+        }
         #FD {
             position: absolute;
             bottom: 0.1%;
@@ -62,7 +71,8 @@
             </div>
             <br />
             <div>
-              
+              <button type="button" class="button" onclick="location.href='@Url.Action("Log_Ud","Bruger")'">Log Ud </button>
+
             </div>
         </div>
 </body>
