--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
@@ -48,8 +48,9 @@
 
 
         <div align="center">
-           
+
             <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListeBruger", "Home")'" />
+            <button type="button" class="button" onclick="location.href='@Url.Action("Log_Ud","Bruger")'">Log Ud </button>
         </div>
 
     </div>
