--- a/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
@@ -51,6 +51,7 @@
         </div>
         <div>
             <input type="button" class="button" value="Tilflytter Liste" onclick="location.href='@Url.Action("TilføjerListeMedarbejder", "Home")'" />
+            <button type="button" class="button" onclick="location.href='@Url.Action("Log_Ud","Bruger")'">Log Ud </button>
         </div>
         <br />
 
