Bruger nu den rigtige controller metode

--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListeMedarbejder.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListeMedarbejder.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div>
-        @using (Html.BeginForm("StudentListe", "Home"))
+        @using (Html.BeginForm("StudentListeMedarbejder", "Home"))
         {
             <input type="text" placeholder="Søg på Navn" name="Navn" />
             <input type="text" placeholder="Søg på Uddannelse" name="Uddannelse" />
