De bruger den rigtige controller metode til de enkelte views

--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListeBruger.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListeBruger.cshtml
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    @using (Html.BeginForm("TilføjerListe", "Home"))
+    @using (Html.BeginForm("TilføjerListeBruger", "Home"))
     {
         <div>
             <input type="text" placeholder="Søg på Navn" name="Navn" />
