--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListeMedarbejder.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListeMedarbejder.cshtml
@@ -21,7 +21,7 @@
 <body>
 
     <div>
-        @using (Html.BeginForm("VirksomhedListe", "Home"))
+        @using (Html.BeginForm("VirksomhedListeMedarbejder", "Home"))
         {
             <input type="text" placeholder="Søg på Navn" name="Navn" />
             <input type="text" placeholder="Søg på Opgavetype" name="Opgave" />
