Logud knappen ændret til at ligne det samme som de andre knapper

--- a/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/MedarbejderForside.cshtml
@@ -24,6 +24,15 @@
         #FD {
 
         }
+        button {
+            cursor: pointer;
+            font-size: medium;
+            background-color: #000000;
+            color: white;
+            text-align: center;
+            width: 150px;
+            height: 40px;
+        }
 
         #Ftekst {
             color: white;
