Ændret log ud knappen på brugerforside til at ligne andre log ud knapper

--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerForside.cshtml
@@ -32,6 +32,15 @@
         #Ftekst2 {
             color: white;
         }
+        button {
+            cursor: pointer;
+            font-size: medium;
+            background-color: #000000;
+            color: white;
+            text-align: center;
+            width: 150px;
+            height: 40px;
+        }
 
         body {
             background-image: url('../../Images/RedigeretForside.PNG');
