Checkbox nu under genrelt info

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
@@ -91,10 +91,11 @@
                 <div style="display: none;">
                     <input type="text" id="DatoForOprettelse" name="DatoForOprettelse" placeholder="DatoForOprettelse" />*
                 </div>
-
+             
+                <div>
                 Ønsker du at flytte*
                 @Html.EditorFor(x => x.ØnskerAtFlytte) Klik på checkboxen hvis ja
-
+            </div>
             </div>
 
             <br />
