--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
@@ -105,12 +105,7 @@
                 @Html.EditorFor(model => model.GenereltInfo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GenereltInfo, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.DatoForOprettelse, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.DatoForOprettelse, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>
+
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.ØnskerAtFlytte, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -122,7 +117,7 @@
         <br />
         <div class="form-group">
             <div class="col-md-10">
-                <input type="submit" id="Rediger" value="Opdater" />
+                <input type="submit" id="Rediger" value="Opdater" class="btn btn-primary"/>
             </div>
         </div>
     </div>
