Slet knapperne er nu røde

--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
@@ -34,7 +34,7 @@
                @using (Html.BeginForm("BrugerListe", "Home"))
                {
                    @Html.Hidden("Id", s.Id)
-               <input type="submit" id="Sletbruger" class="btn btn-primary" value="Slet" />
+               <input type="submit" id="Sletbruger" class="btn btn-danger" value="Slet" />
                }
            </td>
        </tr>
