--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -89,7 +89,7 @@
             <td>@Html.ActionLink("Rediger", "RedigerStudent", "Home", new { id = item.Id }, new { @class = "btn btn-primary" })</td>
             <td>
 
-                @Html.ActionLink("Slet", "StudentDelete", new { id = item.Id }, new { @class = "btn btn-primary" })
+                @Html.ActionLink("Slet", "StudentDelete", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
 
         </tr>
