--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -67,7 +67,7 @@
 
                 <td>
 
-                    @Html.ActionLink("Slet", "VirksomhedDelete", new { id = s.Id}, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Slet", "VirksomhedDelete", new { id = s.Id}, new { @class = "btn btn-danger" })
                 </td>
 
             </tr>
