--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -72,7 +72,7 @@
             <td>@Html.ActionLink("Hent CV", "DownloadTilføjerCV", "Home", new { id = s.Id, cvtitel = s.CVTitel }, new { @target = "_blank", @class = "btn btn-primary" })</td>
 
             <td>@Html.ActionLink("Rediger", "RedigerTilføjer", "Home", new { id = s.Id }, new { @class = "btn btn-primary" })</td>
-            <td>@Html.ActionLink("Slet", "TilføjerDelete", "Home", new { id = s.Id }, new { @class = "btn btn-primary" })</td>
+            <td>@Html.ActionLink("Slet", "TilføjerDelete", "Home", new { id = s.Id }, new { @class = "btn btn-danger" })</td>
         </tr>
 
         }
