--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerStudent.cshtml
@@ -90,6 +90,13 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.UddannelsesSted, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UddannelsesSted, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UddannelsesSted, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Periode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Periode, new { htmlAttributes = new { @class = "form-control" } })
@@ -150,6 +157,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StudieJob, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StudieJob, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.SupplerendeInfo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SupplerendeInfo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SupplerendeInfo, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
