Har skiftet baggrunds billede ud og flyttet med knapperne, samt tekst farve

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -31,17 +31,17 @@
         }
         #FD {
             position: absolute;
-            bottom: 0.1%;
-            right: 35%;
+            top: 0.1%;
+            right: 83%;
 
         }
         #Ftekst {
             color: white;
         }
         #Ftekst2 {
-            color: white;
+            color: black;
         }
-    body { background-image: url('../../Images/RedigeretForside.PNG'); background-size: cover; }
+    body { background-image: url('../../Images/PA_logo_stor.jpg'); background-size: cover; }
     </style>
 </head>
 <body>
