--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -32,7 +32,7 @@
         #FD {
             position: absolute;
             top: 0.1%;
-            right: 83%;
+            right: 80%;
 
         }
         #Ftekst {
@@ -41,7 +41,7 @@
         #Ftekst2 {
             color: black;
         }
-    body { background-image: url('../../Images/PA_logo_stor.jpg'); background-size: cover; }
+    html { background: url('../../Images/PA_logo_stor.jpg') no-repeat center fixed; background-size: cover; }
     </style>
 </head>
 <body>
