Har rettet tilbage til den første tilstand

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -31,17 +31,17 @@
         }
         #FD {
             position: absolute;
-            top: 0.1%;
-            right: 80%;
+            bottom: 0.1%;
+            right: 35%;
 
         }
         #Ftekst {
             color: white;
         }
         #Ftekst2 {
-            color: black;
+            color: white;
         }
-    html { background: url('../../Images/PA_logo_stor.jpg') no-repeat center fixed; background-size: cover; }
+    html { background: url('../../Images/RedigeretForside.PNG') no-repeat center fixed; background-size: cover; }
     </style>
 </head>
 <body>
