Har leget rundt med forside og login

--- a/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Bruger/Login.cshtml
@@ -2,7 +2,8 @@
 @{
     Layout = null;
 }
-
+<html>
+<head>
 <style>
     body {
         background-image: url('../../Images/RedigeretForside.PNG');
@@ -15,10 +16,14 @@
         text-align:right;
         font-family: 'Times New Roman';
     }
+    #LoginDiv{
+        position:absolute;
+        left: 3%;
+    }
 </style>
-
+    </head>
 <body>
-<div class="panel" align ="center">
+<div class="panel" align = "center" >
     <div class="panel-heading">
         <h3> Log In</h3>
     </div>
@@ -44,3 +49,4 @@
     </div>
 </div>
     </body>
+</html>
