--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -31,17 +31,18 @@
         }
         #FD {
             position: absolute;
-            bottom: 0.1%;
-            right: 35%;
+            top: 0.1%;
+            left: 2%;
 
         }
         #Ftekst {
             color: white;
         }
         #Ftekst2 {
-            color: white;
+            color: black;
         }
-    html { background: url('../../Images/RedigeretForside.PNG') no-repeat center fixed; background-size: cover; }
+    body { background: url('../../Images/PA_logo_stor.jpg') no-repeat center fixed; 
+           background-size:cover; }
     </style>
 </head>
 <body>
