Har rettet tilbage til Karina

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -31,17 +31,17 @@
         }
         #FD {
             position: absolute;
-            top: 0.1%;
-            left: 2%;
+            bottom: 0.1%;
+            right: 35%;
 
         }
         #Ftekst {
             color: white;
         }
         #Ftekst2 {
-            color: black;
+            color: white;
         }
-    body { background: url('../../Images/PA_logo_stor.jpg') no-repeat center fixed; 
+    body { background: url('../../Images/RedigeretForside.PNG') no-repeat center fixed; 
            background-size:cover; }
     </style>
 </head>
